RESOLVED FIXED194548
WebServiceWorkerProvider::handleFetch no longer needs a CachedResource parameter
https://bugs.webkit.org/show_bug.cgi?id=194548
Summary WebServiceWorkerProvider::handleFetch no longer needs a CachedResource parameter
youenn fablet
Reported 2019-02-12 11:19:12 PST
WebServiceWorkerProvider::handleFetch no longer needs a CachedResource parameter
Attachments
Patch (4.69 KB, patch)
2019-02-12 11:20 PST, youenn fablet
no flags
Archive of layout-test-results from ews112 for mac-highsierra (2.09 MB, application/zip)
2019-02-12 13:06 PST, EWS Watchlist
no flags
youenn fablet
Comment 1 2019-02-12 11:20:01 PST
EWS Watchlist
Comment 2 2019-02-12 13:06:23 PST
Comment on attachment 361812 [details] Patch Attachment 361812 [details] did not pass mac-debug-ews (mac): Output: https://webkit-queues.webkit.org/results/11124710 New failing tests: http/tests/inspector/network/resource-initiatorNode.html
EWS Watchlist
Comment 3 2019-02-12 13:06:24 PST
Created attachment 361826 [details] Archive of layout-test-results from ews112 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews112 Port: mac-highsierra Platform: Mac OS X 10.13.6
WebKit Commit Bot
Comment 4 2019-02-12 21:24:58 PST
Comment on attachment 361812 [details] Patch Clearing flags on attachment: 361812 Committed r241338: <https://trac.webkit.org/changeset/241338>
WebKit Commit Bot
Comment 5 2019-02-12 21:24:59 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2019-02-13 08:53:34 PST
Note You need to log in before you can comment on or make changes to this bug.