WebServiceWorkerProvider::handleFetch no longer needs a CachedResource parameter https://bugs.webkit.org/show_bug.cgi?id=194548

Reviewed by Alex Christensen.

* WebProcess/Network/WebLoaderStrategy.cpp:
(WebKit::WebLoaderStrategy::scheduleLoad):
* WebProcess/Storage/WebServiceWorkerProvider.cpp:
(WebKit::WebServiceWorkerProvider::handleFetch):
* WebProcess/Storage/WebServiceWorkerProvider.h:


Canonical link: https://commits.webkit.org/208992@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@241338 268f45cc-cd09-0410-ab3c-d52691b4dbfc